modificações pra rodar o DB

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=customization_management;Username=postgres;Password=your_password_here"
-  },
-  "Jwt": {
-    "Key": "your-super-secret-key-with-at-least-32-characters",
-    "Issuer": "customization-management-api",
-    "Audience": "customization-management-clients"
-  },
+    "ConnectionStrings": {
+        "UserDatabase": "Data Source=CustomizationManagement.db"
+},
+    "Jwt": {
+        "Key": "my-super-secret-key-with-at-least-32-characters",
+        "Issuer": "customization-management-api",
+        "Audience": "customization-management-clients"
+    },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
